--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -5,8 +5,15 @@
   margin: 0
   padding: 0
 
+img
+  max-width: 100%
+  height: auto
+  object-fit: cover
+
 body
   font-family: var(--font-text)
+  min-height: 100vh
+  background: var(--body-bg-color)
 
 .container
   max-width: 1200px
