--- a/src/sass/vars.sass
+++ b/src/sass/vars.sass
@@ -2,3 +2,10 @@
   --font-arvo: 'Arvo', serif
   --font-montserrat: 'Montserrat', sans-serif
   --font-text: 'Open Sans', sans-serif
+  --body-bg-color: #f2f3f5
+  --border-radius-size: 6px
+  --color-dark: #2C2C2C
+  --color-grey: #9FA3A7
+  --color-bold-dark: #212121
+  --font-title-size: 22px
+  --font-text-size: 14px
